<resources>
    <string name="app_name">Penta Aspida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="halo">Halo!</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="motivasi_satu">Jangan biarkan ucapan orang lain menjatuhkan mimpimu. Bungkam mulut mereka dengan prestasimu.</string>
    <string name="motivasti_dua">Orang bijak belajar ketika mereka bisa. Orang bodoh belajar ketika mereka terpaksa. -Arthur Wellesley</string>
    <string name="motivasi_tiga">Hiduplah seolah engkau mati besok. Belajarlah seolah engkau hidup selamanya. -Mahatma Gandhi</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="apa_yang_kamu_cari">Apa yang kamu cari?</string>
    <string name="yuk_meditasi">Yuk Meditasi</string>
    <string name="motivasi_harian_buat_kamu">Motivasi harian buat kamu</string>
    <string name="olahraga">Olahraga</string>
    <string name="belajar">Belajar</string>
    <string name="kooperatif">Kooperatif</string>
    <string name="diskusi">Diskusi</string>
    <string name="praktik_meditasi">Praktik <br /> Meditasi</string>
    <string name="manfaat_meditasi">Manfaat<br /> Meditasi</string>
    <string name="meditasi">Meditasi</string>
    <string name="desc_meditasi">Meditasi adalah teknik untuk bisa merasakan rileks dan fokus yang secara perlahan dapat mengurangi tekanan dan stres yang ada di pikiran kita.</string>
    <string name="desc_konsterasi">Dimana meditasi ini dilakukan dengan cara fokus ke suatu objek untuk menjaga kestabilan konsentrasi (objek bisa berupa benda yang berada di sekitar). \n\nSelain pada benda, fokus dapat dilakukan terhadap suara-suara yang dihasilkan oleh alam atau aliran pernafasan kita. \n\nBerikut tips melakukan meditasi konsentrasi:\u000D\n\n1. Memilih objek yang mudah untuk diperhatikan dalam waktu yang lama.\u000D\n\n2. Mencoba fokus ke pernafasan dengan cara memperhatikan atau merasakan sensasi dari bernafas itu sendiri dengan cara merasakan bagaimana udara itu masuk melewati hidung kemudian udara memenuhi paru-paru dan bergerak keluar saat mengembuskan nafas, dengan membawa perhatian kita ke ritme pernafasan. \n\nSecara tidak langsung kita dapat mengarahkan pikiran ke arah keadaan yang lebih tenang, lebih jernih dan stabil sehingga bisa meringankan rasa cemas, stres, dan overthingking.\u000D</string>
    <string name="desc_kesadaran">Kita hanya perlu fokus pada hal yang lebih sederhana seperti apa yang sedang kita rasakan atau pikirkan atau lebih jelasnya membiarkan pikiran kita mengalir sendiri.\n\n Contohnya ketika teringat sesuatu yang cukup memalukan, kita bisa bilang ke diri sendiri kemudian menerima dan melepaskan.\n\n Dengan meditasi kesadaran kita belajar mengenali pikiran kita, moment by moment tanpa rasa menghakimi diri sendiri sesuai dengan quotes dari Swami Muktananda (The founder of Siddha Yoga) \n\n &quot;Your goal is not to battle with the mind but to witnnes the mind&quot; \n\n (Tujuannya bukanlah melawan pikiran itu tapi untuk mengamatinya).<br />
</string>
    <string name="desc_kooperatif">Kooperatif dalam KBBI berarti bersifat kerja sama. Kooperatif adalah sikap yang menunjukkan kerjasama, tidak melakukan penentangan terhadap suatu sikap individu maupun golongan tertentu.</string>
    <string name="kusioner_evaluasi">Kuesioner Evaluasi</string>
    <string name="tips_and_trick"><![CDATA[Tips & Trick]]></string>
    <string name="desc_evaluasi">Kuesioner ini berfungsi untuk mengukur sejauh mana sikap kooperatif kita terhadap diri sendiri.\n\nKooperatif terhadap diri sendiri sebagai cara untuk menilai bahwa kita sudah berdamai dengan diri sendiri, bersyukur, menerima keadaan, memahami diri, dan tidak over thinking.\u000D\n\nTerdapat 10 pertanyaan Evaluasi diri yang harus diisi.</string>
    <string name="desc_tips">Beberapa hal yang perlu dilakukan untuk kooperatif dengan diri sendiri adalah sebagai berikut:\u000D\n\n1.\tBersyukur terhadap pencapaian-pencapaian yang telah diraih\u000D\n2.\tBerpikir positif terhadap apapun yang terjadi pada hari ini\u000D\n3.\tTidak overthinking terhadap hal-hal yang tidak perlu/tidak penting\u000D\n4.\tSemangat dan optimis menjalani hari-hari ke depan\u000D\n5.\tTidak mudah menyerah dalam menggapai target/goal pribadi\u000D\n6.\tMenggunakan waktu dengan baik pada hal-hal positif\u000D\n7.\tMenerima perbedaan orang lain baik dalam berpikir, bersikap maupun karakter \u000D\n8.\tTidak mudah marah terhadap sesuatu yang dialami\u000D\n9.\tDapat menerima dan memilah masukan serta kritikan positif yang diterima\u000D\n10.\tDapat beradaptasi terhadap perubahan-perubahan di lingkungan\u000D\n</string>
    <string name="kontak"><b>RS Pertamina Jaya</b>\u000D\nTelepon: 021 4211911\u000D\n\u000D\n<b>RSUPN Dr. Cipto Mangunkusumo Jakarta atau RSCM</b>\u000D\nTelepon: 1500 135\u000D\n\u000D\n<b>RS Pusat Pertamina</b>\u000D\nTelepon: 021 7219214\u000D\n\u000D\n<b>RSUD Pasar Rebo</b>\u000D\nTelepon: 021 8401127\u000D\n\u000D\n<b>RSUP Fatmawati</b>\u000D\nTelepon: 021 7501524\u000D\n\u000D\n<b>RS Pelni Petamburan</b>\u000D\nTelepon: 0877 22379190\u000D\n\u000D\n<b>RSPAD Gatot Soebroto</b>\u000D\nTelepon: 021 3441008\u000D\n\u000D\n<b>Kasih Ibu General Hospital Denpasar</b>\u000D\n(0361) 3003030\u000D\n\u000D\n<b>RSUP Sanglah</b>\u000D\n(0361) 227912\u000D\n\n<b>Rumah Sakit Pondok Indah</b>\u000D\n(021) 7657525\u000D\n\u000D\n<b>Rumah Sakit Umum Pusat Fatmawati</b>\u000D\n(021) 7501524\u000D\n\u000D\n<b>Jakarta Eye Center Kedoya</b>\u000D\n0804 122 1000\u000D\n\u000D\n<b>Santosa Hospital Bandung Central</b>\u000D\n(022) 4248333\u000D\n\u000D\n<b>Bali International Medical Center (BIMC)</b>\u000D\n(0361) 761263\u000D\n\u000D\n<b>RS Umum Dr. Sardjito DIY</b> \u000D\n(0274) 631190\u000D\n\u000D\n<b>Rumah Sakit H. L. Manambai Abdulkadir (NTB)</b>\u000D\n(0371) 2628078\u000D\n\u000D\n<b>RSUD Bima</b> (NTB)\u000D\n(0374) 43142\u000D\n\u000D\n<b>RS Kristen Lende Moripa</b> (NTT)\u000D\n(0387) 21085\u000D\n\u000D\n<b>RS Kartini (NTT)</b>\u000D\n(0380) 831270\u000D\n\u000D\n<b>RS Al Fatah (Maluku)</b>\u000D\n(0911) 343848\u000D\n\u000D\n<b>RS Hative (Maluku)</b>\u000D\n(0911) 362199\u000D\n\u000D\n<b>RS Provita Jayapura (Papua)</b>\u000D\n(0967) 51628880\u000D\n\u000D\n<b>RS Dian Harapan (Papua)</b>\u000D\n(0967) 572123\u000D\n\u000D\n<b>RSUP H. Adam Malik Sumatera Utara</b> \u000D\n061-8360051\u000D\n\u000D\n<b>RSUP Dr. M. Djamil Sumatera Barat</b> \u000D\n0751-32371\u000D\n\n<b>RS Umum Pusat Dr. Mohammad Hoesin Palembang SUMATERA SELATAN</b>\u000D\n0711-354088\u000D\n\u000D\n<b>RS Umum Pusat Dr. Hasan Sadikin JAWA BARAT</b>\u000D\n022-2034953\u000D\n\u000D\n<b>RS Umum Pusat Dr. Kariadi JAWA TENGAH</b>\u000D\n024-8413476\u000D\n\u000D\n<b>RS Umum Daerah Dr. Soedarso Pontianak KALIMANTAN BARAT</b>\u000D\n0561-737701\u000D\n\u000D\n<b>RS Umum Daerah Abdul Wahab Sjahranie KALIMANTAN TIMUR</b>\u000D\n0541-738118\u000D\n\u000D\n<b>RSUP Prof. Dr. R. D. Kandou SULAWESI UTARA</b>\u000D\n0431-838203\u000D\n\u000D\<b>nRSUP Dr. Wahidin Sudirohusodo SULAWESI SELATAN</b>\u000D\n(0411) 584677\u000D\n\u000D\n<b>RSUD Dr. Zainoel Abidin (Aceh)</b>\u000D\n(0651) 34565\u000D\n\u000D\n<b>RSUD Cut Nyak Dhien (Aceh)</b>\u000D\n(0655) 7009452\u000D\n\u000D\n<b>RS Urip Sumoharjo Bandar Lampung (Lampung)</b>\u000D\n(0721) 771322\u000D\n\u000D\n<b>RS Graha Husada (Lampung)</b>\u000D\n(0721) 240000\u000D\n</string>
    <string name="btn1">Meditasi untuk Relaksasi</string>

    <string name="motivasi_1">Jangan biarkan ucapan orang lain menjatuhkan mimpimu. Bungkam mulut mereka dengan prestasimu.</string>
    <string name="motivasi_2">Orang bijak belajar ketika mereka bisa. Orang bodoh belajar ketika mereka terpaksa. -Arthur Wellesle</string>
    <string name="motivasi_3">Hiduplah seolah engkau mati besok. Belajarlah seolah engkau hidup selamanya. -Mahatma Gandhi</string>
    <string name="motivasi_4">Pendidikan bukan cuma pergi ke sekolah dan mendapatkan gelar. Tapi, juga soal memperluas pengetahuan dan menyerap ilmu kehidupan -Shakuntala Devi</string>
    <string name="motivasi_5">Jangan berhenti belajar sampai kamu merasa bangga dengan hasilnya.</string>
    <string name="motivasi_6">Jangan biarkan siapapun mengatakan kau tidak bisa melakukan sesuatu. Kau bermimpi, kau harus menjaganya. Kalau menginginkan sesuatu, raihlah. Titik. -Chris Gardner, The Pursuit of Happiness</string>
    <string name="motivasi_7">Ubahlah hidupmu hari ini. Jangan bermain-main dengan masa depanmu, lakukan sekarang, jangan menunda. - Simone de Beauvoir</string>
    <string name="motivasi_8">Kalau impianmu tak bisa membuatmu takut, mungkin karena impianmu tak cukup besar. - Muhammad Ali</string>
    <string name="motivasi_9">Belajar tidak diperoleh secara kebetulan. Itu harus dicari dengan semangat dan dihadiri dengan ketekunan– Abigail Adams.</string>
    <string name="motivasi_10">Berjuang untuk sukses tanpa kerja keras seperti mencoba memanen di tempat yang belum kamu tanam -David Bly.</string>
    <string name="motivasi_11">Tidak ada gunanya IQ anda tinggi namun malas, tidak memiliki disiplin. yang penting adalah anda sehat dan mau berkorban untuk masa depan yang cerah– Presiden Habibie.</string>
    <string name="tv_cycling">Cycling (bersepeda) adalah sebuah kegiatan rekreasi atau olahraga, serta merupakan salah satu moda transportasi darat yang menggunakan sepeda.</string>
    <string name="tv_manfaat_cycling">MANFAAT CYCLING BAGI KESEHATAN : \n\n1.\tMenurunkan berat badan\u000D\n2.\tMencegah penyakit jantung dan pembuluh darah\u000D\n3.\tMengurangi risiko kanker\u000D\n4.\tMenghindari diabetes\u000D\n5.\tMeningkatkan kekuatan, keseimbangan, dan koordinasi\u000D\n6.\tMerawat persendian tubuh\u000D\n7.\tMemperbaiki gangguan kesehatan mental\u000D\n8.\tMencegah risiko penyakit Parkinson\u000D\n9.\tMembantu memperpanjang usia\u000D\n</string>
    <string name="tv_joging">Jogging adalah satu bentuk aktivitas lari yang dilakukan dengan kecepatan lambat atau santai. Tujuan utama jogging adalah untuk meningkatkan kebugaran tubuh dengan lebih sedikit tekanan pada tubuh.</string>
    <string name="tv_manfaat_joging">MANFAAT JOGGING BAGI KESEHATAN : \n\n1. Menurunkan berat badan dan mencegah obesitas\u000D\n2. Meningkatkan stamina dan daya tahan tubuh\u000D\n3. Mengurangi kolesterol serta menjaga kadar gula darah dan tekanan darah tetap stabil\u000D\n4. Mencegah diabetes, stroke, dan penyakit jantung\u000D\n5. Memperbaiki suasana hati, meredakan stres, dan mengurangi risiko depresi\u000D\n6. Meningkatkan daya ingat dan konsentrasi\u000D\n7. Membuat tidur lebih nyenyak.\u000D\n\n</string>

</resources>