<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListMotivasiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:background="@drawable/bg_homescreen"
            android:backgroundTint="@color/biru_tiga"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Motivasi Buat Kamu"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_back"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/tv_judul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_judul"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/motivasi_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bg" />

        <TextView
            android:id="@+id/motivasi_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_1" />

        <TextView
            android:id="@+id/motivasi_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_2" />

        <TextView
            android:id="@+id/motivasi_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_3" />

        <TextView
            android:id="@+id/motivasi_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_4" />

        <TextView
            android:id="@+id/motivasi_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_5" />

        <TextView
            android:id="@+id/motivasi_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_6" />

        <TextView
            android:id="@+id/motivasi_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_7" />

        <TextView
            android:id="@+id/motivasi_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_8" />

        <TextView
            android:id="@+id/motivasi_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_9" />

        <TextView
            android:id="@+id/motivasi_11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/outline_btn"
            android:text="@string/motivasi_11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motivasi_10"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>