<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MeditasiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_bg_homescreen"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="fitXY"
            android:background="@drawable/bg_homescreen"
            android:backgroundTint="@color/biru_tiga"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image" />


        <TextView
            android:id="@+id/tv_meditasi"
            android:text="@string/meditasi"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/btn_back"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/tv_meditasi"
            app:layout_constraintBottom_toBottomOf="@id/tv_meditasi"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image" />

        <ImageView
            android:id="@+id/iv_illustrasi_meditasi"
            android:src="@drawable/woman_at_the_blackboard_explains_new_material"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="-20dp"
            android:scaleType="fitCenter"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_meditasi"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/desc_meditasi"
            android:text="@string/desc_meditasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_illustrasi_meditasi"/>

        <ImageView
            android:id="@+id/bg_manfaat_meditasi"
            android:background="@drawable/bg_kotak"
            android:backgroundTint="@color/hijau_dua"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/timer_Meditasi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bg_praktik"
            app:layout_constraintTop_toBottomOf="@id/desc_meditasi"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="-10dp"
            android:src="@drawable/biotech"
            app:layout_constraintBottom_toTopOf="@id/tv_manfaat"
            app:layout_constraintEnd_toEndOf="@id/bg_manfaat_meditasi"
            app:layout_constraintStart_toStartOf="@id/bg_manfaat_meditasi"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_manfaat"
            android:text="@string/manfaat_meditasi"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bg_manfaat_meditasi"
            app:layout_constraintEnd_toEndOf="@id/bg_manfaat_meditasi"
            app:layout_constraintBottom_toBottomOf="@id/bg_manfaat_meditasi"/>

        <ImageView
            android:id="@+id/bg_praktik"
            android:background="@drawable/bg_kotak"
            android:backgroundTint="@color/hijau"
            android:layout_width="0dp"
            android:layout_marginEnd="24dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toEndOf="@id/bg_manfaat_meditasi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_manfaat_meditasi"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="178dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/asset_berdiskusi"
            app:layout_constraintBottom_toTopOf="@id/tv_praktik"
            app:layout_constraintEnd_toEndOf="@id/bg_praktik"
            app:layout_constraintStart_toStartOf="@id/bg_praktik"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_praktik"
            android:text="@string/praktik_meditasi"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bg_praktik"
            app:layout_constraintEnd_toEndOf="@id/bg_praktik"
            app:layout_constraintBottom_toBottomOf="@id/bg_praktik"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/timer_Meditasi"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="Mulai Meditasi"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:backgroundTint="@color/biru_tiga"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            app:iconGravity="textStart"
            app:layout_constraintStart_toStartOf="@id/bg_manfaat_meditasi"
            app:layout_constraintEnd_toEndOf="@id/bg_praktik"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>