<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".KooperatifFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_bg_homescreen"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="fitXY"
            android:background="@drawable/bg_homescreen"
            android:backgroundTint="@color/biru_tiga"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image" />


        <TextView
            android:id="@+id/tv_kooperatif"
            android:text="Kooperatif"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/btn_back"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/tv_kooperatif"
            app:layout_constraintBottom_toBottomOf="@id/tv_kooperatif"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image" />

        <ImageView
            android:id="@+id/iv_illustrasi_meditasi"
            android:src="@drawable/woman_at_the_blackboard_explains_new_material"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="-20dp"
            android:scaleType="fitCenter"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kooperatif"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/desc_meditasi"
            android:text="@string/desc_kooperatif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_illustrasi_meditasi"/>

        <ImageView
            android:id="@+id/bg_kuesioner"
            android:background="@drawable/bg_kotak"
            android:backgroundTint="@color/hijau_dua"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bg_tips"
            app:layout_constraintTop_toBottomOf="@id/desc_meditasi"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="173dp"
            android:layout_height="142dp"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            android:src="@drawable/ill_kooperatif_satu"
            app:layout_constraintBottom_toTopOf="@id/tv_kusioner"
            app:layout_constraintEnd_toEndOf="@id/bg_kuesioner"
            app:layout_constraintStart_toStartOf="@id/bg_kuesioner" />

        <TextView
            android:id="@+id/tv_kusioner"
            android:text="@string/kusioner_evaluasi"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bg_kuesioner"
            app:layout_constraintEnd_toEndOf="@id/bg_kuesioner"
            app:layout_constraintBottom_toBottomOf="@id/bg_kuesioner"/>

        <ImageView
            android:id="@+id/bg_tips"
            android:background="@drawable/bg_kotak"
            android:backgroundTint="@color/ungu"
            android:layout_width="0dp"
            android:layout_marginEnd="24dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toEndOf="@id/bg_kuesioner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_kuesioner"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="185dp"
            android:layout_height="157dp"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            android:src="@drawable/ill_kooperatif_dua"
            app:layout_constraintBottom_toTopOf="@id/tv_tips"
            app:layout_constraintEnd_toEndOf="@id/bg_tips"
            app:layout_constraintStart_toStartOf="@id/bg_tips" />

        <TextView
            android:id="@+id/tv_tips"
            android:text="@string/tips_and_trick"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bg_tips"
            app:layout_constraintEnd_toEndOf="@id/bg_tips"
            app:layout_constraintBottom_toBottomOf="@id/bg_tips"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>